--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-dbcp-1.2.1.jar=/Users/Nicolas/Desktop/M1/S2/INF 3 - D\u00e9veloppement \u00e0 base de composants et services/TP/tp2/Ex-Struts-Spring/web/commons-dbcp-1.2.1.jar
+file.reference.commons-pool-1.3.jar=/Users/Nicolas/Desktop/M1/S2/INF 3 - D\u00e9veloppement \u00e0 base de composants et services/TP/tp2/Ex-Struts-Spring/web/commons-pool-1.3.jar
+file.reference.spring.jar=/Users/Nicolas/Desktop/M1/S2/INF 3 - D\u00e9veloppement \u00e0 base de composants et services/TP/tp2/Ex-Struts-Spring/web/spring.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +46,10 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.struts.classpath}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.commons-dbcp-1.2.1.jar}:\
+    ${file.reference.commons-pool-1.3.jar}:\
+    ${file.reference.spring.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
