--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,8 @@ javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.commons-dbcp-1.2.1.jar-1}:\
     ${file.reference.commons-pool-1.3.jar-1}:\
-    ${file.reference.spring.jar-1}
+    ${file.reference.spring.jar-1}:\
+    ${libs.spring-framework300.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
